force-app/main/default/objects/Http_Callout_Configuration__c/Http_Callout_Configuration__c.object-meta.xml
<CustomObject>
    <label>Http Callout Configuration</label>
    <nameField>
        <label>Http Callout Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Http Callout Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>