force-app/main/default/objects/Http_Callout_Configuration__c/fields/Body_Parameters__c.field-meta.xml
<CustomField>
    <fullName>Body_Parameters__c</fullName>
    <label>Body Parameters</label>
    <length>255</length>
    <type>Text</type>
</CustomField>