force-app/main/default/objects/Http_Callout_Configuration__c/fields/Request_Method__c.field-meta.xml
<CustomField>
    <fullName>Request_Method__c</fullName>
    <label>Request Method</label>
    <length>20</length>
    <type>Text</type>
</CustomField>