force-app/main/default/objects/Http_Callout_Configuration__c/fields/Response__c.field-meta.xml
<CustomField>
    <fullName>Response__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Response</label>
    <referenceTo>Response__c</referenceTo>
    <relationshipLabel>Http Callout Configurations</relationshipLabel>
    <relationshipName>Http_Callout_Configurations</relationshipName>
    <type>Lookup</type>
</CustomField>