force-app/main/default/objects/Http_Callout_Configuration__c/fields/Url_Parameters__c.field-meta.xml
<CustomField>
    <fullName>Url_Parameters__c</fullName>
    <label>Url Parameters</label>
    <length>255</length>
    <type>Text</type>
</CustomField>